<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true"
    android:clipToPadding="true"
    android:contextClickable="true"
    android:longClickable="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTittle_RegPac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="20dp"
        android:text="@string/tittle_main"
        android:textAlignment="center"
        android:textColor="#11504A"
        android:textColorHighlight="#009688"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/names_pac"
        android:inputType="textPersonName"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/editPersonLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/lastname_pac"
        android:inputType="textPersonName"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/username_pac"
        android:inputType="number"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/password_pac"
        android:inputType="textPassword"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/email_pac"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/phone_pac"
        android:inputType="number"
        android:minHeight="48dp" />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="564dp"
        android:layout_marginEnd="64dp"
        android:background="@color/purple_200"
        android:text="Registrar"
        android:textColor="@color/white" />



</FrameLayout>